--- a/config/locales/models/roles.fr.yml
+++ b/config/locales/models/roles.fr.yml
@@ -11,5 +11,5 @@ fr:
     values:
       roles:
         name:
-          Admin: Administrateur
+          admin: Administrateur
           sapeur: Sapeur
